# shlakoblokun

./: .gitignore  README.md  deduplicator.py  pyproject.toml  ru-reflexive-verb-cleaner.py  shlakoblokun-ru.sh  shlakoblokun.py  wikt-plaintext-cleaner.py  wikt-xml-parser.py  yarn-xml-parser.py
.github/workflows/: codeql-analysis.yml  python-setup-n-test.yml  python-setup.yml
ru/: adj-w-comments.txt  adjectives.txt  adverbs-w-comments.txt  adverbs.txt  nouns-w-comments.txt  nouns.txt  verbs-nonrefl-w-comments.txt  verbs-nonrefl.txt  verbs.txt  wiktionary-curse-words.txt  wiktionary-political-slang.txt  yarn.txt
ru/slang/: criminal-slang.txt  military-slang.txt
shlakoblokun/: shlakoblokun.py
shlakoblokun/data/ru/: .exclude-overlaps.txt  adj.txt  adv.txt  n.txt  overlaps.txt  v.txt
shlakoblokun/data/ru/obscene/: rough-words.txt  swear-words.txt  vulgarisms.txt
shlakoblokun/data/ru/slang/: junkie-slang.txt
shlakoblokun/ru/obscene/: rf-tld-stoplist.txt
shlakoblokun/ru/slang/: computer-slang.txt  internet-slang.txt  neologisms.txt  slang.txt  youth-slang.txt
utils/: cyr-filter.py  cyrillic-filter.py  deduplicator.py  inflection-cleaner.py  ru-filter.py  ru-inflection-cleaner.py  ru-reflexive-verb-cleaner.py  russian-filter.py  ruwiktionary-plaintext-dump-cleaner.py  wikt-plaintext-cleaner.py  wikt-xml-parser.py  wiktionary-plaintext-cleaner.py  wiktionary-xml-parser.py  yarn-xml-parser.py
