[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
# requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "shlakoblokun"
authors = [
	{ name = "Kelly Roadkill", email = "4406611+roadkell@users.noreply.github.com" },
]
description = "Шлакоблокунь: генератор смешных (нет) словослияний"
license = { text = "Hippocratic License 3.0" }
readme = "README.md"
keywords = ["cli", "russian"]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"License :: Free To Use But Restricted",
	"Natural Language :: Russian",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Topic :: Games/Entertainment",
]
dynamic = ["version"]
dependencies = ["tqdm"]

[project.urls]
"Homepage" = "https://github.com/roadkell/shlakoblokun"
"Bug Tracker" = "https://github.com/roadkell/shlakoblokun/issues"

[project.scripts]
shlakoblokun = "shlakoblokun.shlakoblokun:main"

[tool.setuptools.package-data]
"shlakoblokun.data" = ["**/*.txt"]

# [tool.setuptools_scm]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.1.0"
